--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,11 @@ dependencies {
 	implementation 'javax.mail:mail:1.4.7'
 	// Spring Context Support
 	implementation 'org.springframework:spring-context-support:5.3.9'
+	//	리캡차
+	implementation 'net.tanesha.recaptcha4j:recaptcha4j:0.0.7'
+	//	리캡차 사용을 위한 json
+	implementation 'javax.json:javax.json-api:1.1.2'
+	implementation 'org.glassfish:javax.json:1.1'
 }
 
 tasks.named('test') {
